--- a/css/style.scss
+++ b/css/style.scss
@@ -90,8 +90,10 @@ button:focus
 }
 
 .btn-flat,.btn{
-  background-color: $primary-color;
+  background-color: transparent;
+  border: 2px solid $primary-color;
   transition: all 300ms ease-in-out;
+  color: $primary-color;
 }
 button,
 button:focus {
@@ -218,9 +220,16 @@ a {
 .btn, .btn-flat {
   position: relative;
   border-radius: 12px;
-  font-size: 16px;
   padding: 10px 50px;
-  color: $white;
+  font-size: 18px;
+  font-weight: bold;
+  font-family: HelveticaNeueBold, sans-serif;
+  //color: $white;
+  &:hover{
+    background-color: $primary-color;
+    border-color:transparent;
+    color: $white;
+  }
 }
 
 .lead {
