--- a/css/style.css
+++ b/css/style.css
@@ -166,11 +166,13 @@ a {
 .lead {
   margin: 10px 0; }
 
+/* *********************************************** */
+/*            =====  Navbar style =====
+* **************************************************/
 .navbar {
   z-index: 1000;
   -webkit-transition: all 300ms  linear;
   -moz-transition: all 300ms  linear;
-  -ms-transition: all 300ms  linear;
   -o-transition: all 300ms  linear;
   transition: all 300ms  linear;
   padding: .1rem 1rem; }
@@ -251,7 +253,6 @@ a {
     -ms-box-shadow: 0 0 9px 0 rgba(24, 57, 78, 0.5);
     box-shadow: 0 0 9px 0 rgba(24, 57, 78, 0.5);
     padding: 0;
-    margin-top: 0;
     margin: 0; }
     .navbar.navbar-shrink .navbar-brand {
       padding: 0; }
@@ -261,11 +262,17 @@ a {
     .navbar.navbar-shrink .navbar-nav li a {
       color: #fff; }
 
+/* *********************************************** */
+/*            =====  Header =====
+* **************************************************/
 header {
   position: relative;
   height: 100vh;
   width: 100%;
-  overflow: hidden; }
+  overflow: hidden;
+  /* *********************************************** */
+  /*            =====  to bottom button =====
+  * **************************************************/ }
   @media (pointer: coarse) and (hover: none) {
     header {
       background: url("https://source.unsplash.com/XT5OInaElMw/1600x900") black no-repeat center center scroll; } }
@@ -311,11 +318,12 @@ header {
     z-index: 2;
     -webkit-animation: bounce 2s infinite 2s;
     animation: bounce 2s infinite 2s;
-    -webkit-transition: all .2s ease-in;
-    transition: all .2s ease-in;
     opacity: .9;
-    -webkit-transition: all .5s ease-in 3s;
-    transition: all .5s ease-in 3s; }
+    -webkit-transition: all s ease-in-out;
+    -moz-transition: all s ease-in-out;
+    -ms-transition: all s ease-in-out;
+    -o-transition: all s ease-in-out;
+    transition: all s ease-in-out; }
     header .scroll-down::before {
       position: absolute;
       top: calc(50% - 8px);
@@ -326,7 +334,7 @@ header {
       height: 16px;
       content: "";
       border: 2px solid #fff;
-      border-width: 0px 0 2px 2px; }
+      border-width: 0 0 2px 2px; }
   header .main-head h3 {
     text-shadow: 2px 4px 5px rgba(136, 136, 136, 0.87);
     font-size: 1.9em;
@@ -388,6 +396,9 @@ header {
     -webkit-transform: translateY(-5px);
     -ms-transform: translateY(-5px);
     transform: translateY(-5px); } }
+/* *********************************************** */
+/*            =====  services section =====
+* **************************************************/
 .services h2 {
   margin-bottom: 20px;
   color: #022840; }
@@ -438,6 +449,9 @@ header {
   .services .service-content:hover:after {
     width: 100%; }
 
+/* *********************************************** */
+/*      ===== //  start our work section style. =====
+* **************************************************/
 .our-work figure {
   width: 100%;
   height: 250px;
@@ -480,12 +494,12 @@ header {
     -ms-transition: all 0.5s ease-in-out;
     -o-transition: all 0.5s ease-in-out;
     transition: all 0.5s ease-in-out; }
-  .our-work figure:hover img {
-    -webkit-transform: scale3d(1.1, 1.1, 1);
-    transform: scale3d(1.1, 1.1, 1); }
   .our-work figure:hover figcaption {
     display: block; }
 
+/* *********************************************** */
+/*            ===== meet Our Team =====
+* **************************************************/
 .our-team {
   position: relative;
   display: block;
@@ -499,141 +513,144 @@ header {
       -ms-transition: all 0.2s ease-in-out;
       -o-transition: all 0.2s ease-in-out;
       transition: all 0.2s ease-in-out; }
-      .our-team .team-show .owl-carousel .item .inner-content {
-        /* Anchor will cover the whole item by default */ }
-        .our-team .team-show .owl-carousel .item .inner-content figure.avatar {
+      .our-team .team-show .owl-carousel .item .inner-content figure.avatar {
+        position: relative;
+        overflow: hidden;
+        text-align: center;
+        cursor: pointer;
+        height: 200px;
+        width: 200px;
+        display: inline-block;
+        border: 2px solid #fff;
+        border-radius: 50%; }
+        .our-team .team-show .owl-carousel .item .inner-content figure.avatar:after {
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          left: 0;
+          top: 0;
+          content: '';
+          border: 5px outset rgba(219, 180, 155, 0.9);
+          display: block;
+          border-radius: 50%;
+          -moz-animation: rotate 5s infinite linear;
+          -webkit-animation: rotate 5s infinite linear;
+          animation: rotate 5s infinite linear;
+          box-shadow: 0 0 5px rgba(219, 180, 155, 0.2); }
+        .our-team .team-show .owl-carousel .item .inner-content figure.avatar img {
           position: relative;
-          overflow: hidden;
-          text-align: center;
-          cursor: pointer;
-          height: 200px;
-          width: 200px;
-          display: inline-block;
+          display: block;
+          min-height: 100%;
+          max-width: 100%;
+          width: 100%;
+          height: 100%;
+          border-radius: 50%;
+          -webkit-transition: all 0.3s ease-in-out;
+          -moz-transition: all 0.3s ease-in-out;
+          -ms-transition: all 0.3s ease-in-out;
+          -o-transition: all 0.3s ease-in-out;
+          transition: all 0.3s ease-in-out; }
+        .our-team .team-show .owl-carousel .item .inner-content figure.avatar figcaption {
+          padding: 2em;
+          color: #fff;
+          text-transform: uppercase;
+          font-size: 1.25em;
+          -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%; }
+          .our-team .team-show .owl-carousel .item .inner-content figure.avatar figcaption::before, .our-team .team-show .owl-carousel .item .inner-content figure.avatar figcaption::after {
+            pointer-events: none; }
+          .our-team .team-show .owl-carousel .item .inner-content figure.avatar figcaption > a {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 1000;
+            text-indent: 200%;
+            white-space: nowrap;
+            font-size: 0;
+            opacity: 0; }
+        .our-team .team-show .owl-carousel .item .inner-content figure.avatar h2 {
+          word-spacing: -0.15em;
+          font-weight: 300;
+          margin: 0; }
+          .our-team .team-show .owl-carousel .item .inner-content figure.avatar h2 span {
+            font-weight: 800; }
+        .our-team .team-show .owl-carousel .item .inner-content figure.avatar p {
+          margin: 0;
+          letter-spacing: 1px;
+          font-size: 68.5%; }
+        .our-team .team-show .owl-carousel .item .inner-content figure.avatar p {
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+          transition: opacity 0.35s, transform 0.35s;
+          -webkit-transform: translate3d(-50%, -50%, 0);
+          transform: translate3d(-50%, -50%, 0);
+          -webkit-transform-origin: 50%;
+          transform-origin: 50%; }
+        .our-team .team-show .owl-carousel .item .inner-content figure.avatar figcaption::before {
+          content: '';
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          width: 120px;
+          height: 120px;
           border: 2px solid #fff;
-          border-radius: 50%; }
-          .our-team .team-show .owl-carousel .item .inner-content figure.avatar:after {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            left: 0;
-            top: 0;
-            content: '';
-            border: 5px outset rgba(219, 180, 155, 0.9);
-            display: block;
-            border-radius: 50%;
-            -moz-animation: rotate 5s infinite linear;
-            -webkit-animation: rotate 5s infinite linear;
-            animation: rotate 5s infinite linear;
-            box-shadow: 0 0 5px rgba(219, 180, 155, 0.2); }
-          .our-team .team-show .owl-carousel .item .inner-content figure.avatar img {
-            position: relative;
-            display: block;
-            min-height: 100%;
-            max-width: 100%;
-            width: 100%;
-            height: 100%;
-            border-radius: 50%; }
-          .our-team .team-show .owl-carousel .item .inner-content figure.avatar figcaption {
-            padding: 2em;
-            color: #fff;
-            text-transform: uppercase;
-            font-size: 1.25em;
-            -webkit-backface-visibility: hidden;
-            backface-visibility: hidden;
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%; }
-            .our-team .team-show .owl-carousel .item .inner-content figure.avatar figcaption::before, .our-team .team-show .owl-carousel .item .inner-content figure.avatar figcaption::after {
-              pointer-events: none; }
-            .our-team .team-show .owl-carousel .item .inner-content figure.avatar figcaption > a {
-              position: absolute;
-              top: 0;
-              left: 0;
-              width: 100%;
-              height: 100%;
-              z-index: 1000;
-              text-indent: 200%;
-              white-space: nowrap;
-              font-size: 0;
-              opacity: 0; }
-          .our-team .team-show .owl-carousel .item .inner-content figure.avatar h2 {
-            word-spacing: -0.15em;
-            font-weight: 300;
-            margin: 0; }
-            .our-team .team-show .owl-carousel .item .inner-content figure.avatar h2 span {
-              font-weight: 800; }
-          .our-team .team-show .owl-carousel .item .inner-content figure.avatar p {
-            margin: 0;
-            letter-spacing: 1px;
-            font-size: 68.5%; }
-          .our-team .team-show .owl-carousel .item .inner-content figure.avatar p {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-            transition: opacity 0.35s, transform 0.35s;
-            -webkit-transform: translate3d(-50%, -50%, 0);
-            transform: translate3d(-50%, -50%, 0);
-            -webkit-transform-origin: 50%;
-            transform-origin: 50%; }
-          .our-team .team-show .owl-carousel .item .inner-content figure.avatar figcaption::before {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            width: 120px;
-            height: 120px;
-            border: 2px solid #fff;
-            content: '';
-            opacity: 0;
-            -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-            transition: opacity 0.35s, transform 0.35s;
-            -webkit-transform: translate3d(-50%, -50%, 0) rotate3d(0, 0, 1, -45deg) scale3d(0, 0, 1);
-            transform: translate3d(-50%, -50%, 0) rotate3d(0, 0, 1, -45deg) scale3d(0, 0, 1);
-            -webkit-transform-origin: 50%;
-            transform-origin: 50%;
-            background-color: rgba(2, 40, 64, 0.5); }
-          .our-team .team-show .owl-carousel .item .inner-content figure.avatar p {
-            width: 100px;
-            text-transform: none;
-            font-size: 121%;
-            line-height: 2; }
-            .our-team .team-show .owl-carousel .item .inner-content figure.avatar p a {
-              color: #fff; }
-              .our-team .team-show .owl-carousel .item .inner-content figure.avatar p a:hover, .our-team .team-show .owl-carousel .item .inner-content figure.avatar p a:focus {
-                opacity: 0.6; }
-              .our-team .team-show .owl-carousel .item .inner-content figure.avatar p a i {
-                opacity: 0;
-                -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-                transition: opacity 0.35s, transform 0.35s; }
-              .our-team .team-show .owl-carousel .item .inner-content figure.avatar p a:first-child i {
-                -webkit-transform: translate3d(-60px, -60px, 0);
-                transform: translate3d(-60px, -60px, 0); }
-              .our-team .team-show .owl-carousel .item .inner-content figure.avatar p a:nth-child(2) i {
-                -webkit-transform: translate3d(60px, -60px, 0);
-                transform: translate3d(60px, -60px, 0); }
-              .our-team .team-show .owl-carousel .item .inner-content figure.avatar p a:nth-child(3) i {
-                -webkit-transform: translate3d(-60px, 60px, 0);
-                transform: translate3d(-60px, 60px, 0); }
-              .our-team .team-show .owl-carousel .item .inner-content figure.avatar p a:nth-child(4) i {
-                -webkit-transform: translate3d(60px, 60px, 0);
-                transform: translate3d(60px, 60px, 0); }
-          .our-team .team-show .owl-carousel .item .inner-content figure.avatar:hover {
-            background-color: black; }
-            .our-team .team-show .owl-carousel .item .inner-content figure.avatar:hover figcaption::before {
-              opacity: 1;
-              -webkit-transform: translate3d(-50%, -50%, 0) rotate3d(0, 0, 1, -45deg) scale3d(1, 1, 1);
-              transform: translate3d(-50%, -50%, 0) rotate3d(0, 0, 1, -45deg) scale3d(1, 1, 1); }
-            .our-team .team-show .owl-carousel .item .inner-content figure.avatar:hover h2 {
+          opacity: 0;
+          -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+          transition: opacity 0.35s, transform 0.35s;
+          -webkit-transform: translate3d(-50%, -50%, 0) rotate3d(0, 0, 1, -45deg) scale3d(0, 0, 1);
+          transform: translate3d(-50%, -50%, 0) rotate3d(0, 0, 1, -45deg) scale3d(0, 0, 1);
+          -webkit-transform-origin: 50%;
+          transform-origin: 50%;
+          background-color: rgba(219, 180, 155, 0.8); }
+        .our-team .team-show .owl-carousel .item .inner-content figure.avatar p {
+          width: 100px;
+          text-transform: none;
+          font-size: 121%;
+          line-height: 2; }
+          .our-team .team-show .owl-carousel .item .inner-content figure.avatar p a {
+            color: #fff; }
+            .our-team .team-show .owl-carousel .item .inner-content figure.avatar p a:hover, .our-team .team-show .owl-carousel .item .inner-content figure.avatar p a:focus {
+              opacity: 0.6; }
+            .our-team .team-show .owl-carousel .item .inner-content figure.avatar p a i {
               opacity: 0;
-              -webkit-transform: translate3d(-50%, -50%, 0) scale3d(0.8, 0.8, 1);
-              transform: translate3d(-50%, -50%, 0) scale3d(0.8, 0.8, 1); }
-            .our-team .team-show .owl-carousel .item .inner-content figure.avatar:hover p i:empty {
-              -webkit-transform: translate3d(0, 0, 0);
-              transform: translate3d(0, 0, 0);
-              /* just because it's stronger than nth-child */
-              opacity: 1; }
+              -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+              transition: opacity 0.35s, transform 0.35s; }
+            .our-team .team-show .owl-carousel .item .inner-content figure.avatar p a:first-child i {
+              -webkit-transform: translate3d(-60px, -60px, 0);
+              transform: translate3d(-60px, -60px, 0); }
+            .our-team .team-show .owl-carousel .item .inner-content figure.avatar p a:nth-child(2) i {
+              -webkit-transform: translate3d(60px, -60px, 0);
+              transform: translate3d(60px, -60px, 0); }
+            .our-team .team-show .owl-carousel .item .inner-content figure.avatar p a:nth-child(3) i {
+              -webkit-transform: translate3d(-60px, 60px, 0);
+              transform: translate3d(-60px, 60px, 0); }
+            .our-team .team-show .owl-carousel .item .inner-content figure.avatar p a:nth-child(4) i {
+              -webkit-transform: translate3d(60px, 60px, 0);
+              transform: translate3d(60px, 60px, 0); }
+        .our-team .team-show .owl-carousel .item .inner-content figure.avatar:hover img {
+          -webkit-transform: scale3d(1.1, 1.1, 1);
+          transform: scale3d(1.1, 1.1, 1); }
+        .our-team .team-show .owl-carousel .item .inner-content figure.avatar:hover figcaption::before {
+          opacity: 1;
+          -webkit-transform: translate3d(-50%, -50%, 0) rotate3d(0, 0, 1, -45deg) scale3d(1, 1, 1);
+          transform: translate3d(-50%, -50%, 0) rotate3d(0, 0, 1, -45deg) scale3d(1, 1, 1); }
+        .our-team .team-show .owl-carousel .item .inner-content figure.avatar:hover h2 {
+          opacity: 0;
+          -webkit-transform: translate3d(-50%, -50%, 0) scale3d(0.8, 0.8, 1);
+          transform: translate3d(-50%, -50%, 0) scale3d(0.8, 0.8, 1); }
+        .our-team .team-show .owl-carousel .item .inner-content figure.avatar:hover p i:empty {
+          -webkit-transform: translate3d(0, 0, 0);
+          transform: translate3d(0, 0, 0);
+          opacity: 1; }
     .our-team .team-show .owl-carousel .owl-nav .owl-next,
     .our-team .team-show .owl-carousel .owl-nav .owl-prev {
       position: absolute;
@@ -699,7 +716,7 @@ header {
     transform: rotate(0deg); }
   100% {
     transform: rotate(360deg); } }
-/*==============ROTATE-REV=================*/
+/*============== ROTATE-REV =================*/
 @-moz-keyframes rotate-rev {
   0% {
     -moz-transform: rotate(0deg); }
@@ -715,7 +732,7 @@ header {
     transform: rotate(0deg); }
   100% {
     transform: rotate(-360deg); } }
-/*==============PULSE======================*/
+/*==============  PULSE  ======================*/
 @-moz-keyframes pulse {
   0% {
     -moz-transform: scale(0.1);
